[gd_scene load_steps=3 format=3 uid="uid://bjkcjxoms5kh5"]

[ext_resource type="Script" path="res://main_menu/CharacterCreator.gd" id="1_t3xcp"]
[ext_resource type="PackedScene" uid="uid://cb2wcdmwyqjuy" path="res://world/chars/CharacterPlayer.tscn" id="2_v8d3e"]

[node name="CharacterCreator" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3xcp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Character Creation"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Random"

[node name="CharCreatorBackButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
gui_disable_input = true
render_target_update_mode = 4

[node name="CharacterPlayer" parent="VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_v8d3e")]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer/SubViewport"]
current = true
zoom = Vector2(10, 10)

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CharCreatorBackButton" to="." method="_on_char_creator_back_button_pressed"]
